# mri-rotation

./: README.md  commands.sh  config.json  models.md  nfi_rotate.py  pyproject.toml  train_test_split.py
data/: README.md
data_loader/: data_loaders.py
model/: loss.py  metric.py  model.py
