[tool.poetry]
name = "mri_rotation"
version = "0.1.0"
description = "Neural network to correct rotation of MRI images."
authors = ["Alson van der Meulen <git@alm.nufan.net>"]

[tool.poetry.dependencies]
python = "^3.7"
nibabel = "^3.1.1"
torch = "^1.5.1"
matplotlib = "^3.3.0"
scipy = "^1.5.2"
numpy = "^1.19.1"
scikit-learn = "^0.23"
tensorboard = ">=1.14.0"
torchvision = "^0.6.1"
pandas = "^1.1.0"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]
tqdm = "^4.48.0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12.2"]
build-backend = "poetry.masonry.api"
